--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.0.4",
+    "method-override": "^3.0.0",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1"
